--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "reset": "npm run rollback && npm run migrate && npm run seed",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "start": "node src/app.js",
-    "start:dev": "nodemon src/app.js",
+    "start": "node src/server.js",
+    "start:dev": "nodemon src/server.js",
     "start:solution": "docker-compose up --build",
     "test": "jest",
     "test:solution": "docker-compose build && docker-compose run --rm api npm test && docker-compose down"
